# vectordb

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
core/: __init__.py  db.py  hnsw.py  search.py  storage.py
core/embeddings/: __init__.py  base.py  pretrained.py  word2vec.py
data/: download_corpus.py
examples/: compare_models.py  word_clusters.py
training/: corpus.py  dataset.py  trainer.py
viz/: plot.py  reduce.py
