[project]
name = "vectordb"
version = "0.1.0"
description = "A vector database built from scratch for learning"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "sentence-transformers",
    "scikit-learn",
    "matplotlib",
    "plotly",
    "rich",
    "requests",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatchling which directories contain our source packages
packages = ["core", "training", "viz", "examples"]

[project.scripts]
# Run as: uv run train-word2vec
train-word2vec = "training.trainer:main"
